--- a/index-en.html
+++ b/index-en.html
@@ -3,62 +3,77 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MyFairTech</title>
+  <title>MyFairTech - IT Consulting and Solutions</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <style>
-    body { font-family: sans-serif; margin: 0; background: #f4f7f8; }
-    header { background: #b996e3; color: white; padding: 20px 40px; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; }
-    nav { display: flex; gap: 20px; }
-    nav a { color: white; text-decoration: none; font-weight: bold; }
-    .dropdown { position: relative; display: inline-block; }
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: white;
-      min-width: 200px;
-      z-index: 1;
-      border-radius: 6px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-    .dropdown-content a {
-      color: #444;
-      padding: 10px 16px;
-      text-decoration: none;
-      display: block;
-    }
-    .dropdown:hover .dropdown-content { display: block; }
-    .language-selector img { width: 26px; height: 18px; margin-left: 10px; border-radius: 3px; border: 2px solid transparent; }
+    /* Estilos base mantenidos igual que el index original */
+    /* [...] */
   </style>
 </head>
 <body>
+
 <header>
   <h1>MyFairTech</h1>
   <nav>
     <a href="index-en.html">Home</a>
+
     <div class="dropdown">
-      <a href="servicios-en.html">Services ▾</a>
+      <a href="services.html">Services ▾</a>
       <div class="dropdown-content">
-        <a href="consultoria-en.html">Consulting</a>
-        <a href="soporte-en.html">IT Support</a>
-        <a href="modernizacion-en.html">App Modernization</a>
-        <a href="ztna-en.html">ZTNA / Remote Access</a>
-        <a href="cloud-en.html">Cloud Infrastructure</a>
+        <a href="consulting.html">Consulting</a>
+        <a href="support.html">IT Support</a>
+        <a href="modernization.html">App Modernization</a>
+        <a href="ztna.html">ZTNA / Remote Access</a>
+        <a href="cloud.html">Cloud Infrastructure</a>
       </div>
     </div>
-    <a href="casos-en.html">Cases</a>
-    <a href="nosotros-en.html">About Us</a>
-    <a href="contacto-en.html">Contact</a>
+
+    <a href="cases.html">Cases</a>
+    <a href="about.html">About Us</a>
+    <a href="contact.html">Contact</a>
   </nav>
+
   <div class="language-selector">
-    <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES"></a>
-    <a href="index-en.html"><img src="https://flagcdn.com/gb.svg" alt="EN"></a>
-    <a href="index-pt.html"><img src="https://flagcdn.com/br.svg" alt="PT"></a>
-    <a href="index-it.html"><img src="https://flagcdn.com/it.svg" alt="IT"></a>
+    <a href="index.html" title="Español"><img src="https://flagcdn.com/es.svg" alt="ES" /></a>
+    <a href="index-en.html" title="English"><img src="https://flagcdn.com/gb.svg" alt="EN" /></a>
+    <a href="index-pt.html" title="Português"><img src="https://flagcdn.com/br.svg" alt="PT" /></a>
+    <a href="index-it.html" title="Italiano"><img src="https://flagcdn.com/it.svg" alt="IT" /></a>
   </div>
 </header>
-<main style="padding: 40px; text-align:center;">
-  <h2>Home</h2>
-  <p>Página de ejemplo en idioma EN - Home</p>
+
+<main>
+  <section class="hero">
+    <h2>Practical and tailored tech solutions for your business</h2>
+    <p>We offer full IT consulting services focused on cloud infrastructure, virtualization, and modern remote access solutions to empower your business.</p>
+    <a href="https://calendly.com/myfairtech" target="_blank" class="btn-primary">Book your free demo</a>
+  </section>
+
+  <section class="services" aria-label="Highlighted Services">
+    <div class="card">
+      <h3>Consulting</h3>
+      <p>We optimize IT processes, identify and eliminate hidden costs, and modernize infrastructure and workflows for practical and efficient solutions.</p>
+    </div>
+    <div class="card">
+      <h3>IT Support</h3>
+      <p>Tailored plans to ensure the availability and functionality of critical services. We take charge of IT operations and enhance key systems and platforms.</p>
+    </div>
+    <div class="card">
+      <h3>App Modernization</h3>
+      <p>We bring legacy applications to the web securely and scalably without the need for rewriting code.</p>
+    </div>
+  </section>
+
+  <section class="contact-section" aria-label="Contact">
+    <h2>Contact Us</h2>
+    <p>Got a question or need a solution? Email us at <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
+    <p>Prefer a quick call? <a href="https://calendly.com/myfairtech" target="_blank">Schedule a free consultation here</a></p>
+    <p>Let’s talk!</p>
+  </section>
 </main>
-<footer style="text-align:center; background:#8a6bc1; color:white; padding:10px;">&copy; 2025 MyFairTech</footer>
+
+<footer>
+  &copy; 2025 MyFairTech. All rights reserved.
+</footer>
+
 </body>
 </html>
