--- a/index-it.html
+++ b/index-it.html
@@ -3,62 +3,300 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MyFairTech</title>
+  <title>MyFairTech - Consulenza e Soluzioni IT</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <style>
-    body { font-family: sans-serif; margin: 0; background: #f4f7f8; }
-    header { background: #b996e3; color: white; padding: 20px 40px; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; }
-    nav { display: flex; gap: 20px; }
-    nav a { color: white; text-decoration: none; font-weight: bold; }
-    .dropdown { position: relative; display: inline-block; }
+    :root {
+      --color-lila: #b996e3;
+      --color-lila-oscuro: #8a6bc1;
+      --color-gris-fondo: #f4f7f8;
+      --color-texto: #222;
+      --color-blanco: #fff;
+      --color-cta: #7c56b4;
+      --color-cta-hover: #623d97;
+    }
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      margin: 0; padding: 0;
+      font-family: 'Poppins', sans-serif;
+      background: var(--color-gris-fondo);
+      color: var(--color-texto);
+      line-height: 1.6;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+    header {
+      background: var(--color-lila);
+      color: var(--color-blanco);
+      padding: 20px 40px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    header h1 {
+      font-weight: 600;
+      margin: 0;
+      font-size: 1.8rem;
+      letter-spacing: 1.5px;
+    }
+    nav {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+    nav a {
+      color: var(--color-blanco);
+      text-decoration: none;
+      font-weight: 600;
+      padding: 8px 12px;
+      border-radius: 4px;
+      transition: background-color 0.3s ease;
+    }
+    nav a:hover {
+      background-color: var(--color-lila-oscuro);
+    }
+    .language-selector a {
+      display: inline-block;
+      margin-left: 12px;
+      border-radius: 4px;
+      overflow: hidden;
+      border: 2px solid transparent;
+      transition: border-color 0.3s ease;
+    }
+    .language-selector a:hover {
+      border-color: var(--color-blanco);
+    }
+    .language-selector img {
+      width: 26px;
+      height: 18px;
+      display: block;
+    }
+
+    main {
+      flex: 1;
+      max-width: 1100px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+    .hero {
+      background: var(--color-blanco);
+      border-radius: 12px;
+      padding: 40px 30px;
+      box-shadow: 0 3px 12px rgba(0,0,0,0.05);
+      text-align: center;
+    }
+    .hero h2 {
+      font-weight: 600;
+      font-size: 2.2rem;
+      margin-bottom: 12px;
+      color: var(--color-lila-oscuro);
+    }
+    .hero p {
+      font-size: 1.1rem;
+      max-width: 650px;
+      margin: 0 auto 24px auto;
+      color: #555;
+    }
+    .btn-primary {
+      background-color: var(--color-cta);
+      color: var(--color-blanco);
+      padding: 12px 28px;
+      font-weight: 600;
+      border: none;
+      border-radius: 30px;
+      cursor: pointer;
+      font-size: 1rem;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
+      display: inline-block;
+    }
+    .btn-primary:hover {
+      background-color: var(--color-cta-hover);
+    }
+
+    .services {
+      margin-top: 60px;
+      display: grid;
+      gap: 30px;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    }
+    .card {
+      background: var(--color-blanco);
+      border-radius: 12px;
+      padding: 24px 20px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.06);
+      transition: transform 0.3s ease;
+    }
+    .card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+    }
+    .card h3 {
+      font-weight: 600;
+      margin-top: 0;
+      color: var(--color-lila);
+    }
+    .card p {
+      color: #444;
+      font-size: 0.95rem;
+      margin-bottom: 16px;
+    }
+
+    .contact-section {
+      background: var(--color-lila);
+      color: var(--color-blanco);
+      margin: 80px 0 40px 0;
+      border-radius: 12px;
+      padding: 30px 20px;
+      text-align: center;
+      box-shadow: 0 3px 15px rgba(0,0,0,0.1);
+    }
+    .contact-section h2 {
+      margin-top: 0;
+      margin-bottom: 15px;
+      font-weight: 600;
+    }
+    .contact-section p {
+      font-size: 1.1rem;
+      margin-bottom: 12px;
+    }
+    .contact-section a {
+      color: var(--color-blanco);
+      font-weight: 600;
+      text-decoration: underline;
+    }
+
+    footer {
+      background: var(--color-lila-oscuro);
+      color: var(--color-blanco);
+      text-align: center;
+      padding: 15px 10px;
+      font-size: 0.9rem;
+      margin-top: auto;
+    }
+
+    @media (max-width: 600px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 12px;
+      }
+      nav {
+        gap: 10px;
+      }
+      .hero h2 {
+        font-size: 1.7rem;
+      }
+      main {
+        margin: 20px auto;
+        padding: 0 15px;
+      }
+    }
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+
     .dropdown-content {
       display: none;
       position: absolute;
-      background-color: white;
-      min-width: 200px;
-      z-index: 1;
+      background-color: var(--color-blanco);
+      min-width: 220px;
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+      z-index: 1000;
       border-radius: 6px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      top: 100%;
+      left: 0;
     }
+
     .dropdown-content a {
       color: #444;
       padding: 10px 16px;
       text-decoration: none;
       display: block;
+      font-size: 0.95rem;
+      font-weight: 500;
+      transition: background-color 0.2s ease;
     }
-    .dropdown:hover .dropdown-content { display: block; }
-    .language-selector img { width: 26px; height: 18px; margin-left: 10px; border-radius: 3px; border: 2px solid transparent; }
+
+    .dropdown-content a:hover {
+      background-color: #f3e8ff;
+      color: #6b21a8;
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
   </style>
 </head>
 <body>
+
 <header>
   <h1>MyFairTech</h1>
   <nav>
     <a href="index-it.html">Home</a>
     <div class="dropdown">
-      <a href="servicios-it.html">Servizi ▾</a>
+      <a href="servizi.html">Servizi ▾</a>
       <div class="dropdown-content">
-        <a href="consultoria-it.html">Consulenza</a>
-        <a href="soporte-it.html">Supporto IT</a>
-        <a href="modernizacion-it.html">Modernizzazione App</a>
-        <a href="ztna-it.html">ZTNA / Accesso Remoto</a>
-        <a href="cloud-it.html">Infrastruttura Cloud</a>
+        <a href="consulenza.html">Consulenza</a>
+        <a href="supporto.html">Supporto IT</a>
+        <a href="modernizzazione.html">Modernizzazione App</a>
+        <a href="ztna.html">ZTNA / Accesso Remoto</a>
+        <a href="cloud.html">Infrastruttura Cloud</a>
       </div>
     </div>
-    <a href="casos-it.html">Casi</a>
-    <a href="nosotros-it.html">Chi Siamo</a>
-    <a href="contacto-it.html">Contatto</a>
+    <a href="casi.html">Casi</a>
+    <a href="chi-siamo.html">Chi Siamo</a>
+    <a href="contatto.html">Contatto</a>
   </nav>
+
   <div class="language-selector">
-    <a href="index.html"><img src="https://flagcdn.com/es.svg" alt="ES"></a>
-    <a href="index-en.html"><img src="https://flagcdn.com/gb.svg" alt="EN"></a>
-    <a href="index-pt.html"><img src="https://flagcdn.com/br.svg" alt="PT"></a>
-    <a href="index-it.html"><img src="https://flagcdn.com/it.svg" alt="IT"></a>
+    <a href="index.html" title="Español"><img src="https://flagcdn.com/es.svg" alt="ES" /></a>
+    <a href="index-en.html" title="English"><img src="https://flagcdn.com/gb.svg" alt="EN" /></a>
+    <a href="index-pt.html" title="Português"><img src="https://flagcdn.com/br.svg" alt="PT" /></a>
+    <a href="index-it.html" title="Italiano"><img src="https://flagcdn.com/it.svg" alt="IT" /></a>
   </div>
 </header>
-<main style="padding: 40px; text-align:center;">
-  <h2>Home</h2>
-  <p>Página de ejemplo en idioma IT - Home</p>
+
+<main>
+  <section class="hero">
+    <h2>Soluzioni tecnologiche pratiche e su misura per la tua azienda</h2>
+    <p>Offriamo servizi completi di consulenza IT con focus su infrastruttura cloud, virtualizzazione e accesso remoto moderno per potenziare il tuo business.</p>
+    <a href="https://calendly.com/myfairtech" target="_blank" class="btn-primary">Prenota la tua demo gratuita</a>
+  </section>
+
+  <section class="services" aria-label="Servizi in evidenza">
+    <div class="card">
+      <h3>Consulenza</h3>
+      <p>Ottimizziamo i processi IT, individuiamo e eliminiamo i costi nascosti, modernizziamo infrastrutture e workflow con soluzioni pratiche.</p>
+    </div>
+    <div class="card">
+      <h3>Supporto IT</h3>
+      <p>Piani personalizzati per garantire disponibilità e funzionalità dei servizi critici. Ci occupiamo delle operazioni IT e valorizziamo le piattaforme chiave.</p>
+    </div>
+    <div class="card">
+      <h3>Modernizzazione App</h3>
+      <p>Portiamo le tue applicazioni legacy sul web in modo sicuro e scalabile, senza bisogno di riscrittura del codice.</p>
+    </div>
+  </section>
+
+  <section class="contact-section" aria-label="Contatto">
+    <h2>Contattaci</h2>
+    <p>Hai domande o hai bisogno di una soluzione? Scrivici a <a href="mailto:myfairtech@gmail.com">myfairtech@gmail.com</a></p>
+    <p>Preferisci una chiamata veloce? <a href="https://calendly.com/myfairtech" target="_blank">Prenota una consulenza gratuita qui</a></p>
+    <p>Parliamone!</p>
+  </section>
 </main>
-<footer style="text-align:center; background:#8a6bc1; color:white; padding:10px;">&copy; 2025 MyFairTech</footer>
+
+<footer>
+  &copy; 2025 MyFairTech. Tutti i diritti riservati.
+</footer>
+
 </body>
 </html>
