--- a/index.html
+++ b/index.html
@@ -242,22 +242,20 @@
 <header>
   <h1>MyFairTech</h1>
   <nav>
-  <a href="index.html">Inicio</a>
-
+  <a href="/index.html">Inicio</a>
   <div class="dropdown">
-    <a href="servicios.html">Servicios ▾</a>
+    <a href="/servicios.html">Servicios ▾</a>
     <div class="dropdown-content">
-      <a href="consultoria.html">Consultoría</a>
-      <a href="soporte.html">Soporte IT</a>
-      <a href="modernizacion.html">Modernización de Apps</a>
-      <a href="ztna.html">ZTNA / Acceso Remoto</a>
-      <a href="cloud.html">Infraestructura Cloud</a>
+      <a href="/consultoria.html">Consultoría</a>
+      <a href="/soporte.html">Soporte IT</a>
+      <a href="/modernizacion.html">Modernización de Apps</a>
+      <a href="/ztna.html">ZTNA / Acceso Remoto</a>
+      <a href="/cloud.html">Infraestructura Cloud</a>
     </div>
   </div>
-
-  <a href="casos.html">Casos</a>
-  <a href="nosotros.html">Nosotros</a>
-  <a href="contacto.html">Contacto</a>
+  <a href="/casos.html">Casos</a>
+  <a href="/nosotros.html">Nosotros</a>
+  <a href="/contacto.html">Contacto</a>
 </nav>
 
   <div class="language-selector">
